@@ -16,9 +16,11 @@ import org.openqa.selenium.NoSuchElementException;
 import org.openqa.selenium.WebElement;
 import org.openqa.selenium.support.FindBy;
 
-import teammates.common.datatransfer.FeedbackParticipantType;
-import teammates.common.datatransfer.questions.FeedbackConstantSumQuestionDetails;
-import teammates.common.datatransfer.questions.FeedbackConstantSumResponseDetails;
+import teammates.common.datatransfer.participanttypes.QuestionRecipientType;
+import teammates.common.datatransfer.participanttypes.ViewerType;
+import teammates.common.datatransfer.questions.FeedbackConstantSumOptionsQuestionDetails;
+import teammates.common.datatransfer.questions.FeedbackConstantSumOptionsResponseDetails;
+import teammates.common.datatransfer.questions.FeedbackConstantSumRecipientsQuestionDetails;
 import teammates.common.datatransfer.questions.FeedbackMcqQuestionDetails;
 import teammates.common.datatransfer.questions.FeedbackMsqQuestionDetails;
 import teammates.common.datatransfer.questions.FeedbackNumericalScaleQuestionDetails;
@@ -86,8 +88,8 @@ public class FeedbackResultsPage extends AppPage {
     }
 
     public void verifyResponseDetails(FeedbackQuestion question,
-            List<FeedbackResponse> givenResponses,
-            List<FeedbackResponse> otherResponses,
+            List<ExpectedFeedbackResponse> givenResponses,
+            List<ExpectedFeedbackResponse> otherResponses,
             Set<String> visibleGivers, Set<String> visibleRecipients) {
         if (!hasDisplayedResponses(question)) {
             return;
@@ -116,16 +118,18 @@ public class FeedbackResultsPage extends AppPage {
     }
 
     public void verifyNumScaleStatistics(int questionNum, String[] expectedStats) {
-        verifyTableRowValues(getNumScaleStatistics(questionNum), expectedStats);
+        verifyTableBodyValues(getNumScaleStatisticsTable(questionNum), new String[][] { expectedStats });
     }
 
     public void verifyRubricStatistics(int questionNum, String[][] expectedStats,
             String[][] expectedStatsExcludingSelf) {
         WebElement excludeSelfCheckbox = getRubricExcludeSelfCheckbox(questionNum);
         markOptionAsUnselected(excludeSelfCheckbox);
+        waitForPageToLoad();
         verifyTableBodyValues(getRubricStatistics(questionNum), expectedStats);
 
         markOptionAsSelected(excludeSelfCheckbox);
+        waitForPageToLoad();
         verifyTableBodyValues(getRubricStatistics(questionNum), expectedStatsExcludingSelf);
     }
 
@@ -195,55 +199,57 @@ public class FeedbackResultsPage extends AppPage {
     }
 
     private void verifyGivenResponses(FeedbackQuestion question,
-            List<FeedbackResponse> givenResponses) {
-        for (FeedbackResponse response : givenResponses) {
-            WebElement responseField = getGivenResponseField(question.getQuestionNumber(), response.getRecipient());
-            assertTrue(isResponseEqual(question, responseField, response));
+            List<ExpectedFeedbackResponse> givenResponses) {
+        for (ExpectedFeedbackResponse expectedResponse : givenResponses) {
+            WebElement responseField =
+                    getGivenResponseField(question.getQuestionNumber(), expectedResponse.getRecipient());
+            assertTrue(isResponseEqual(question, responseField, expectedResponse.getResponse()));
         }
     }
 
     private void verifyOtherResponses(FeedbackQuestion question,
-            List<FeedbackResponse> otherResponses,
+            List<ExpectedFeedbackResponse> otherResponses,
             Set<String> visibleGivers, Set<String> visibleRecipients) {
         Set<String> recipients = getRecipientsSql(otherResponses);
         for (String recipient : recipients) {
-            List<FeedbackResponse> expectedResponses = otherResponses.stream()
+            List<ExpectedFeedbackResponse> expectedResponses = otherResponses.stream()
                     .filter(r -> r.getRecipient().equals(recipient)
-                            && (question.isResponseVisibleTo(FeedbackParticipantType.RECEIVER)
-                                    || question.isResponseVisibleTo(FeedbackParticipantType.STUDENTS)
-                                    || question.isResponseVisibleTo(FeedbackParticipantType.OWN_TEAM_MEMBERS)
-                                    || question.isResponseVisibleTo(FeedbackParticipantType.RECEIVER_TEAM_MEMBERS)))
-                    .collect(Collectors.toList());
+                            && (question.isResponseVisibleTo(ViewerType.RECEIVER)
+                                    || question.isResponseVisibleTo(ViewerType.STUDENTS)
+                                    || question.isResponseVisibleTo(ViewerType.OWN_TEAM_MEMBERS)
+                                    || question.isResponseVisibleTo(ViewerType.RECEIVER_TEAM_MEMBERS)))
+                    .toList();
 
             verifyResponseForRecipient(question, recipient, expectedResponses, visibleGivers, visibleRecipients);
         }
     }
 
-    private Set<String> getRecipientsSql(List<FeedbackResponse> responses) {
-        return responses.stream().map(FeedbackResponse::getRecipient).collect(Collectors.toSet());
+    private Set<String> getRecipientsSql(List<ExpectedFeedbackResponse> responses) {
+        return responses.stream().map(ExpectedFeedbackResponse::getRecipient).collect(Collectors.toSet());
     }
 
     private void verifyResponseForRecipient(FeedbackQuestion question, String recipient,
-            List<FeedbackResponse> otherResponses,
+            List<ExpectedFeedbackResponse> otherResponses,
             Set<String> visibleGivers, Set<String> visibleRecipients) {
         List<WebElement> responseViews = getAllResponseViews(question.getQuestionNumber());
-        for (FeedbackResponse response : otherResponses) {
-            boolean isRecipientVisible = visibleRecipients.contains(response.getGiver())
+        for (ExpectedFeedbackResponse expectedResponse : otherResponses) {
+            boolean isRecipientVisible = visibleRecipients.contains(expectedResponse.getGiver())
                     || CURRENT_STUDENT_IDENTIFIER.equals(recipient);
-            boolean isGiverVisible = visibleGivers.contains(response.getGiver())
-                    || visibleGivers.contains("RECEIVER") && CURRENT_STUDENT_IDENTIFIER.equals(response.getRecipient())
-                    || CURRENT_STUDENT_IDENTIFIER.equals(response.getGiver());
-            boolean isGiverVisibleToInstructor = question.getRecipientType() == FeedbackParticipantType.INSTRUCTORS
+            boolean isGiverVisible = visibleGivers.contains(expectedResponse.getGiver())
+                    || visibleGivers.contains("RECEIVER")
+                    && CURRENT_STUDENT_IDENTIFIER.equals(expectedResponse.getRecipient())
+                    || CURRENT_STUDENT_IDENTIFIER.equals(expectedResponse.getGiver());
+            boolean isGiverVisibleToInstructor = question.getRecipientType() == QuestionRecipientType.INSTRUCTORS
                     && visibleGivers.contains("INSTRUCTORS");
             if (isRecipientVisible) {
                 int recipientIndex = getRecipientIndex(question.getQuestionNumber(), recipient);
                 WebElement responseView = responseViews.get(recipientIndex);
                 List<WebElement> responsesFields = getAllResponseFields(responseView);
                 if (isGiverVisible || isGiverVisibleToInstructor) {
-                    int giverIndex = getGiverIndex(responseView, response.getGiver());
-                    assertTrue(isResponseEqual(question, responsesFields.get(giverIndex), response));
+                    int giverIndex = getGiverIndex(responseView, expectedResponse.getGiver());
+                    assertTrue(isResponseEqual(question, responsesFields.get(giverIndex), expectedResponse.getResponse()));
                 } else {
-                    assertTrue(isAnyAnonymousResponseEqual(question, responseView, response));
+                    assertTrue(isAnyAnonymousResponseEqual(question, responseView, expectedResponse.getResponse()));
                 }
             } else {
                 verifyAnonymousResponseView(question, otherResponses, isGiverVisible);
@@ -252,11 +258,11 @@ public class FeedbackResultsPage extends AppPage {
     }
 
     private void verifyAnonymousResponseView(FeedbackQuestion question,
-            List<FeedbackResponse> expectedResponses,
+            List<ExpectedFeedbackResponse> expectedResponses,
             boolean isGiverVisible) {
         List<WebElement> anonymousViews = getAllResponseViews(question.getQuestionNumber()).stream()
                 .filter(v -> isAnonymous(v.findElement(By.className("response-recipient")).getText()))
-                .collect(Collectors.toList());
+                .toList();
         if (anonymousViews.isEmpty()) {
             fail("No anonymous views found");
         }
@@ -265,14 +271,14 @@ public class FeedbackResultsPage extends AppPage {
         for (WebElement responseView : anonymousViews) {
             hasCorrectResponses = true;
             List<WebElement> responseFields = getAllResponseFields(responseView);
-            for (FeedbackResponse response : expectedResponses) {
+            for (ExpectedFeedbackResponse expectedResponse : expectedResponses) {
                 if (isGiverVisible) {
-                    int giverIndex = getGiverIndex(responseView, response.getGiver());
-                    if (!isResponseEqual(question, responseFields.get(giverIndex), response)) {
+                    int giverIndex = getGiverIndex(responseView, expectedResponse.getGiver());
+                    if (!isResponseEqual(question, responseFields.get(giverIndex), expectedResponse.getResponse())) {
                         hasCorrectResponses = false;
                         break;
                     }
-                } else if (!isAnyAnonymousResponseEqual(question, responseView, response)) {
+                } else if (!isAnyAnonymousResponseEqual(question, responseView, expectedResponse.getResponse())) {
                     hasCorrectResponses = false;
                     break;
                 }
@@ -380,20 +386,32 @@ public class FeedbackResultsPage extends AppPage {
                 questionDetails.getMsqChoices(), questionDetails.isOtherEnabled());
     }
 
-    private String appendMultiChoiceInfo(String info, FeedbackParticipantType generateOptionsFor, List<String> choices,
+    private String appendMultiChoiceInfo(String info, QuestionRecipientType generateOptionsFor, List<String> choices,
             boolean isOtherEnabled) {
         StringBuilder additionalInfo = new StringBuilder(info);
-        if (generateOptionsFor == FeedbackParticipantType.NONE) {
+        if (generateOptionsFor == QuestionRecipientType.NONE) {
             additionalInfo = appendOptions(additionalInfo, choices);
             if (isOtherEnabled) {
                 additionalInfo.append(TestProperties.LINE_SEPARATOR).append("Other");
             }
         } else {
-            additionalInfo.append("The options for this question is automatically generated from the list of all ")
-                    .append(getDisplayGiverName(generateOptionsFor).toLowerCase())
-                    .append('.');
+            String displayRecipientName = switch (generateOptionsFor) {
+            case STUDENTS:
+                yield "Students in this course";
+            case INSTRUCTORS:
+                yield "Instructors in this course";
+            case TEAMS:
+                yield "Teams in this course";
+            default:
+                assert false : "Unexpected recipient type for option generation: " + generateOptionsFor;
+                yield "";
+            };
 
+            additionalInfo.append("The options for this question is automatically generated from the list of all ")
+                    .append(displayRecipientName.toLowerCase())
+                    .append('.');
         }
+
         return additionalInfo.toString();
     }
 
@@ -416,7 +434,7 @@ public class FeedbackResultsPage extends AppPage {
         return appendOptions(additionalInfo, questionDetails.getOptions()).toString();
     }
 
-    private String getConstSumOptionsAddInfo(FeedbackConstantSumQuestionDetails questionDetails) {
+    private String getConstSumOptionsAddInfo(FeedbackConstantSumOptionsQuestionDetails questionDetails) {
         StringBuilder additionalInfo = new StringBuilder("Distribute points (among options) question options:");
         additionalInfo.append(TestProperties.LINE_SEPARATOR);
         additionalInfo = appendOptions(additionalInfo, questionDetails.getConstSumOptions());
@@ -430,7 +448,7 @@ public class FeedbackResultsPage extends AppPage {
         return additionalInfo.toString();
     }
 
-    private String getConstSumRecipientsAddInfo(FeedbackConstantSumQuestionDetails questionDetails) {
+    private String getConstSumRecipientsAddInfo(FeedbackConstantSumRecipientsQuestionDetails questionDetails) {
         StringBuilder additionalInfo = new StringBuilder("Distribute points (among recipients) question");
         additionalInfo.append(TestProperties.LINE_SEPARATOR);
         if (questionDetails.isPointsPerOption()) {
@@ -500,10 +518,10 @@ public class FeedbackResultsPage extends AppPage {
             return "Rank (recipients) question";
         case CONSTSUM_OPTIONS:
             return getConstSumOptionsAddInfo(
-                    (FeedbackConstantSumQuestionDetails) question.getQuestionDetailsCopy());
+                    (FeedbackConstantSumOptionsQuestionDetails) question.getQuestionDetailsCopy());
         case CONSTSUM_RECIPIENTS:
             return getConstSumRecipientsAddInfo(
-                    (FeedbackConstantSumQuestionDetails) question.getQuestionDetailsCopy());
+                    (FeedbackConstantSumRecipientsQuestionDetails) question.getQuestionDetailsCopy());
         default:
             throw new AssertionError(
                     "Unknown question type: " + question.getQuestionType());
@@ -522,10 +540,12 @@ public class FeedbackResultsPage extends AppPage {
         case RANK_OPTIONS:
             return getRankOptionsAnsString((FeedbackRankOptionsQuestionDetails) question.getQuestionDetailsCopy(),
                     (FeedbackRankOptionsResponseDetails) response);
-        case CONSTSUM:
+        case CONSTSUM_OPTIONS:
             return getConstSumOptionsAnsString(
-                    (FeedbackConstantSumQuestionDetails) question.getQuestionDetailsCopy(),
-                    (FeedbackConstantSumResponseDetails) response);
+                    (FeedbackConstantSumOptionsQuestionDetails) question.getQuestionDetailsCopy(),
+                    (FeedbackConstantSumOptionsResponseDetails) response);
+        case CONSTSUM_RECIPIENTS:
+            return response.getAnswerString();
         case RUBRIC:
         case CONTRIB:
             return "";
@@ -545,11 +565,8 @@ public class FeedbackResultsPage extends AppPage {
         return String.join(TestProperties.LINE_SEPARATOR, answerStrings);
     }
 
-    private String getConstSumOptionsAnsString(FeedbackConstantSumQuestionDetails question,
-            FeedbackConstantSumResponseDetails responseDetails) {
-        if (question.isDistributeToRecipients()) {
-            return responseDetails.getAnswerString();
-        }
+    private String getConstSumOptionsAnsString(FeedbackConstantSumOptionsQuestionDetails question,
+            FeedbackConstantSumOptionsResponseDetails responseDetails) {
         List<String> options = question.getConstSumOptions();
         List<Integer> answers = responseDetails.getAnswers();
         List<String> answerStrings = new ArrayList<>();
@@ -568,8 +585,8 @@ public class FeedbackResultsPage extends AppPage {
         return responseView.findElements(By.tagName("tm-single-response"));
     }
 
-    private WebElement getNumScaleStatistics(int questionNum) {
-        return getQuestionResponsesSection(questionNum).findElement(By.cssSelector("#numscale-statistics tbody tr"));
+    private WebElement getNumScaleStatisticsTable(int questionNum) {
+        return getQuestionResponsesSection(questionNum).findElement(By.id("numscale-statistics"));
     }
 
     private WebElement getRubricExcludeSelfCheckbox(int questionNum) {
@@ -627,5 +644,32 @@ public class FeedbackResultsPage extends AppPage {
             }
         }
         throw new AssertionError("Recipient not found: " + recipient);
+    }
+
+    /**
+     * Expected response tuple used for result verification.
+     */
+    public static class ExpectedFeedbackResponse {
+        private final FeedbackResponse response;
+        private final String giver;
+        private final String recipient;
+
+        public ExpectedFeedbackResponse(FeedbackResponse response, String giver, String recipient) {
+            this.response = response;
+            this.giver = giver;
+            this.recipient = recipient;
+        }
+
+        public FeedbackResponse getResponse() {
+            return response;
+        }
+
+        public String getGiver() {
+            return giver;
+        }
+
+        public String getRecipient() {
+            return recipient;
+        }
     }
 }
